open-policy-agent/open-policy-agent/policy/gen-block-default-namespace/samples/block-default-namespace/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-default-namespace-allowed
  namespace: app
  labels:
    app: nginx-default-namespace
spec:
  containers:
  - name: nginx
    image: nginx
