open-policy-agent/open-policy-agent/policy/gen-block-default-namespace/samples/block-default-namespace/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-namespace-disallowed
  namespace: default
  labels:
    app: nginx-host-namespace
spec:
  containers:
  - name: nginx
    image: nginx
