open-policy-agent/open-policy-agent/policy/gen-block-default-namespace/samples/block-default-namespace/example_disallowed_secret.yaml
apiVersion: v1
data:
  username: YWRtaW4=
  password: MWYyZDFlMmU2N2Rm
kind: Secret
metadata:
  name: mysecret
  namespace: default
type: Opaque
